--- a/spring-zuul/src/main/resources/application.properties
+++ b/spring-zuul/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9999
 # 服务与服务之间相互调用一般都是根据这个name 。
 spring.application.name= springcloud-zuul
 #指定服务注册中心的地址
-eureka.client.service-url.defaultZone=http://192.168.12.60:7000/eureka/
+eureka.client.service-url.defaultZone=http://localhost:7000/eureka/
 #地区
 zuul.routes.api-c.path=/api-city/**
 zuul.routes.api-c.service-id=springcloud-city
