--- a/springboot-tag/src/main/resources/application.properties
+++ b/springboot-tag/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8040
 #数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/kls?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/nht?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=kong
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #在控制太打印sql日志
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
@@ -31,7 +31,7 @@ mybatis-plus.configuration.map-underscore-to-camel-case=false
 # 服务与服务之间相互调用一般都是根据这个name 。
 spring.application.name= springboot-tag
 #指定服务注册中心的地址
-eureka.client.service-url.defaultZone=http://192.168.12.60:7000/eureka/
+eureka.client.service-url.defaultZone=http://localhost:7000/eureka/
 
 # 发呆时间，即服务续约到期时间（缺省为90s）表示eureka server至上一次收到client的心跳之后，
 # 等待下一次心跳的超时时间，在这个时间内若没收到下一次心跳，则将移除该instance
